fixed Account Settings link from UserBar

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -294,6 +294,9 @@ body {
 
   margin: 20px 30px 0px 30px;
 }
+.userbar-button-settings {
+  color: white;
+}
 .userbar-account-container {
   margin-top: 15vh;
 }
