OwnedCharacters Page - has error

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -777,6 +777,9 @@ body {
 .offset-left-20 {
   margin-left: 20px;
 }
+.offset-left-10 {
+  margin-left: 10px;
+}
 .offset-top-5 {
   margin-top: 5px;
 }
