--- a/client/src/App.css
+++ b/client/src/App.css
@@ -550,7 +550,7 @@ body {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  align-items: top;
+  align-items: center;
   overflow: hidden;
 
   margin-top: 5px;
